[project]
name = "stackslib"
version = "1.0.0a1"
description = "UNO Card game engine and a multiplayer server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "websockets>=12.0"
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/stackslib",
]

[project.scripts]
stackslib-server = "stackslib.server:main"
